# cast

./: .gitignore  APP_PLAN.md  CLAUDE.md  Cargo.toml  LICENSE  PLAN.md  README.md
.github/workflows/: build.yml  release.yml
Cast/: Info.plist
Cast/Cast/: CastApp.swift
Cast/Cast.xcodeproj/: project.pbxproj
Cast/Cast/Assets.xcassets/App Icon & Top Shelf Image.brandassets/App Icon - App Store.imagestack/Back.imagestacklayer/Content.imageset/: Contents.json
Cast/Cast/Assets.xcassets/App Icon & Top Shelf Image.brandassets/App Icon - App Store.imagestack/Front.imagestacklayer/Content.imageset/: Contents.json
Cast/Cast/Assets.xcassets/App Icon & Top Shelf Image.brandassets/App Icon - App Store.imagestack/Middle.imagestacklayer/Content.imageset/: Contents.json
Cast/Cast/Assets.xcassets/App Icon & Top Shelf Image.brandassets/App Icon.imagestack/Back.imagestacklayer/Content.imageset/: Contents.json
Cast/Cast/Assets.xcassets/App Icon & Top Shelf Image.brandassets/App Icon.imagestack/Front.imagestacklayer/Content.imageset/: Contents.json
Cast/Cast/Assets.xcassets/App Icon & Top Shelf Image.brandassets/App Icon.imagestack/Middle.imagestacklayer/Content.imageset/: Contents.json
Cast/Cast/Assets.xcassets/App Icon & Top Shelf Image.brandassets/Top Shelf Image Wide.imageset/: Contents.json
Cast/Cast/Assets.xcassets/App Icon & Top Shelf Image.brandassets/Top Shelf Image.imageset/: Contents.json
Cast/Cast/Models/: Series.swift  ServerConnection.swift
Cast/Cast/Services/: APIClient.swift  BonjourBrowser.swift  ProgressReporter.swift  WakeOnLan.swift
Cast/Cast/Views/: ActorDetailView.swift  EpisodeCastView.swift  ErrorView.swift  MovieDetailView.swift  MoviePlayerView.swift  MoviesGridView.swift  PlayerView.swift  SeriesDetailView.swift  SeriesGridView.swift  ServerDiscoveryView.swift
desktop/gui/: index.html
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: lib.rs  main.rs  tray.rs
scripts/: install-windows.ps1  uninstall-windows.ps1
server/: Cargo.toml
server/src/: db.rs  lib.rs  library.rs  main.rs  mdns.rs  media.rs  routes.rs  subtitle.rs  tmdb.rs
